Fri Oct 23 16:16:34 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* fairy-0.5.2-travel+ipv4 を(形式的に)マージ

Fri Oct 23 16:06:46 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: ipv4-only対応

Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb: Controller#init_policy evalでシンボルを指定していた.
	* BUG#151: ruby1.9.1系のバグだった. ruby1.9.1-243以降を使うことで解決

Wed Oct 14 19:32:45 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-direct-product.rb, b-inputtable.rb, binput.rb, bjob.rb,
	  controller.rb: [BUG#151] debug01

Tue Oct  6 19:38:26 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* b-barrier.rb, b-shuffle.rb: require し忘れ(merged by
	  0.5.2-003-travel-01)

Fri Oct  2 18:19:27 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* master.rb: deep-connect ipv4 only対応による変更

Wed Sep 30 16:33:13 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* controller.rb, bjob.rb b-cat.rb, njob.rb, block-source.rb: 
	  [SR#102] gbreak対応

Mon Sep 28 18:04:16 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.rb: [SR#141] FilterChain追加

Mon Sep 28 17:33:20 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* Makefile: tgzタグでスナップショットをとるファイルを修正
	* controller.rb, b-direct-product.rb, n-direct-product.rb:
	  [SR#102] 直積対応
	* controller.rb, bjob.rb, b-join.rb, b-zipper.rb, bhere.rb: 上流の
	  bjobから下流のnjobを作成したときに初期化できるようにした.

Wed Sep 16 17:08:57 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* local-file-output.rb: [BUG#135]対応.

Tue Sep 15 19:47:53 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* n-mod-group-by.rb: 消えるはずのゴミが消えない問題に対応
	* port.rb: CTLTOKEN_SET_NO_IMPORT 対応

Tue Sep 15 18:44:11 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/fairy/node/n-each-element-selector.rb,
	  lib/fairy/node/n-find.rb, lib/fairy/node/n-input-iota.rb,
	  lib/fairy/node/n-input-varray.rb: requireし忘れ

Tue Sep 15 18:22:11 2009  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* local-file-output.rb, here.rb: [BUG#135]対応. 消えるはずのゴミ
	  が消えない問題に対応
	* bin/master, bin/inspector: [BUG#147] 実行権を設定
